# shamela_crawler

./: .gitignore  .mise.toml  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  scrapy.cfg  shamela_crawler.ipynb
shamela/: exporters.py  items.py  middlewares.py  pipelines.py  progress_bar.py  runner.py  settings.py  utils.py
shamela/db/: __init__.py
shamela/db/migrations/: env.py
shamela/db/migrations/versions/: 2024_03_25_0256-b0e9d30fac5c_initial.py  2024_03_25_1816-7dd17bdb5535_add_author_table.py  2024_03_25_1817-560ba3da89ae_add_author_to_book_table.py  2024_04_08_0226-b3f0147f3861_add_pages_to_book_table.py  2024_04_08_1620-5912092c4e24_add_volumes_to_book_table.py
shamela/exporters/: epub.py
shamela/spiders/: authors.py  book.py  books.py  categories.py
