[tool.poetry]
name = "shamela_crawler"
version = "0.1.0"
description = "A web crawler for https://shamela.ws"
authors = ["yshalsager <ysh-alsager@hotmail.com>"]
license = "GPL-3.0-only"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Scrapy = "^2.11.1"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["shamela"]
ignore_missing_imports = true
disallow_untyped_defs = true
#disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

[tool.ruff]  # https://github.com/charliermarsh/ruff
fix = true
line-length = 100
src = ["shamela"]
target-version = "py312"

[tool.ruff.lint]
ignore = ["E501", "S307", "RET504", "S101", "D211", "D213", "ERA001", "G004", "ISC001"]
ignore-init-module-imports = true
select = ["A", "B", "BLE", "C4", "C90", "DTZ", "E", "ERA", "F", "G", "I", "INP", "ISC", "N", "NPY", "PGH", "PIE", "PLC", "PLE", "PLR", "PLW", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "S", "SIM", "T10", "T20", "TID", "UP", "W", "YTT"]
unfixable = ["ERA001", "F401", "F841", "T201", "T203"]

[tool.ruff.lint.extend-per-file-ignores]
"*/migrations/*/*.py" = ["N999"]

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"
