[project]
name = "shamela_crawler"
version = "0.1.0"
description = "A web crawler for https://shamela.ws"
authors = [{ name = "yshalsager", email = "contact@yshalsager.com" }]
requires-python = "~=3.13"
license = "GPL-3.0-only"
dependencies = [
    "alembic>=1.16.2,<2",
    "ebooklib>=0.18,<0.19",
    "h2>=4.2.0,<5",
    "scrapy>=2.13.2,<3",
    "sqlalchemy>=2.0.41,<3",
    "tqdm>=4.67.1,<5",
]

[dependency-groups]
dev = [
    "pre-commit>=3.7.0,<4",
    "ruff>=0.12.1,<1",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
files = ["shamela"]
ignore_missing_imports = true
disallow_untyped_defs = true
#disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

[tool.ruff]
fix = true
line-length = 100
src = ["shamela"]
target-version = "py313"

[tool.ruff.lint]
ignore = ["E501", "S307", "RET504", "S101", "D211", "D213", "ERA001", "G004", "ISC001"]
select = ["A", "B", "BLE", "C4", "C90", "DTZ", "E", "ERA", "F", "G", "I", "INP", "ISC", "N", "NPY", "PGH", "PIE", "PLC", "PLE", "PLR", "PLW", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "S", "SIM", "T10", "T20", "TID", "UP", "W", "YTT"]
unfixable = ["ERA001", "F401", "F841", "T201", "T203"]

[tool.ruff.lint.extend-per-file-ignores]
"*/migrations/*/*.py" = ["N999"]

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"
